# fabro

./: .env.example  .gitignore  AGENTS.md  CONTRIBUTING.md  Caddyfile  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yaml  docker-compose.yaml  fabro.toml  install.md  install.sh  package.json  rustfmt.toml  spec-dod-multimodel.dot  spec-dod.dot
crates/agent/: Cargo.toml
crates/agent-cli/: Cargo.toml
crates/agent-cli/src/: main.rs
crates/agent/src/: cli.rs  config.rs  docker_env.rs  execution_env.rs  history.rs  lib.rs  local_env.rs  session.rs  subagent.rs  test_support.rs  tool_registry.rs  tools.rs  types.rs
crates/agent/src/profiles/: openai.rs
crates/arc-agent/: Cargo.toml  README.md
crates/arc-agent/src/: cli.rs  compaction.rs  config.rs  docker_env.rs  error.rs  event.rs  execution_env.rs  file_tracker.rs  history.rs  lib.rs  local_env.rs  loop_detection.rs  main.rs  mcp_integration.rs  project_docs.rs  provider_profile.rs  read_before_write_env.rs  read_before_write_sandbox.rs  sandbox.rs  session.rs  skills.rs  subagent.rs  test_support.rs  tool_execution.rs  tool_registry.rs  tools.rs  truncation.rs  types.rs  v4a_patch.rs
crates/arc-agent/src/profiles/: anthropic.rs  gemini.rs  mod.rs  openai.rs
crates/arc-agent/tests/: cli_integration.rs  parity_matrix.rs
crates/arc-attractor/: Cargo.toml  README.md
crates/arc-attractor/src/: artifact.rs  checkpoint.rs  condition.rs  context.rs  daytona_env.rs  engine.rs  error.rs  event.rs  jwt_auth.rs  lib.rs  main.rs  outcome.rs  pipeline.rs  preamble.rs  server.rs  stylesheet.rs  transform.rs
crates/arc-attractor/src/cli/: backend.rs  cli_backend.rs  mod.rs  run.rs  serve.rs  task_config.rs  validate.rs
crates/arc-attractor/src/graph/: types.rs
crates/arc-attractor/src/handler/: codergen.rs  conditional.rs  exit.rs  fan_in.rs  manager_loop.rs  mod.rs  parallel.rs  script.rs  start.rs  sub_pipeline.rs  wait_human.rs
crates/arc-attractor/src/interviewer/: callback.rs  console.rs  queue.rs  recording.rs  replay.rs  web.rs
crates/arc-attractor/src/parser/: ast.rs  grammar.rs  lexer.rs  mod.rs  semantic.rs
crates/arc-attractor/src/validation/: mod.rs  rules.rs
crates/arc-attractor/tests/: cli.rs  daytona_integration.rs  integration.rs
crates/arc-git-storage/: Cargo.toml
crates/arc-git-storage/src/: branchstore.rs  error.rs  gitobj.rs  lib.rs  snapshot.rs  trailerlink.rs
crates/arc-mcp/: Cargo.toml
crates/arc-mcp/src/: client.rs  client_handler.rs  config.rs  connection_manager.rs  lib.rs
crates/arc-mcp/tests/: stdio_integration.rs  test_mcp_server.py
crates/arc-util/: Cargo.toml  build.rs
crates/arc-util/src/: lib.rs  terminal.rs
crates/arc-util/src/redact/: entropy.rs  gitleaks.rs  jsonl.rs  mod.rs
crates/arc-workflows/: Cargo.toml
crates/arc-workflows/src/: condition.rs  daytona_sandbox.rs  engine.rs  error.rs  event.rs  git.rs  git_credential_sandbox.rs  github_app.rs  preamble.rs  transform.rs
crates/arc-workflows/src/cli/: backend.rs  cli_backend.rs  mod.rs  progress.rs  run.rs  run_config.rs  runs.rs
crates/arc-workflows/src/context/: keys.rs
crates/arc-workflows/src/graph/: types.rs
crates/arc-workflows/src/handler/: codergen.rs  command.rs  human.rs  manager_loop.rs  mod.rs  parallel.rs  prompt.rs
crates/arc-workflows/src/hook/: config.rs  executor.rs  mod.rs  runner.rs
crates/arc-workflows/src/interviewer/: auto_approve.rs  console.rs  mod.rs
crates/arc-workflows/src/validation/: rules.rs
crates/arc-workflows/tests/: daytona_integration.rs  integration.rs
crates/attractor/: Cargo.toml
crates/attractor/src/: daytona_env.rs  engine.rs  event.rs  preamble.rs  server.rs  stylesheet.rs
crates/attractor/src/cli/: backend.rs  mod.rs  run.rs  serve.rs  task_config.rs
crates/attractor/src/graph/: types.rs
crates/attractor/src/handler/: codergen.rs  conditional.rs  exit.rs  fan_in.rs  manager_loop.rs  mod.rs  parallel.rs  script.rs  start.rs  sub_pipeline.rs  tool.rs  wait_human.rs
crates/attractor/src/interviewer/: auto_approve.rs  console.rs  mod.rs
crates/attractor/src/validation/: rules.rs
crates/attractor/tests/: daytona_integration.rs  integration.rs
crates/unified-llm/: Cargo.toml
crates/unified-llm/src/: catalog.rs  client.rs  error.rs  generate.rs  tools.rs  types.rs
crates/unified-llm/src/providers/: anthropic.rs  common.rs  gemini.rs  mod.rs  openai.rs  openai_compatible.rs
lib/crates/arc-cli/: Cargo.toml
lib/crates/arc-cli/src/: doctor.rs  install.rs  main.rs
lib/crates/arc-cli/tests/: cli.rs
lib/crates/arc-github/: Cargo.toml
lib/crates/arc-github/src/: lib.rs
lib/crates/arc-linear/: Cargo.toml
lib/crates/arc-llm/: Cargo.toml
lib/crates/arc-llm/src/: catalog.rs  client.rs  types.rs
lib/crates/arc-workflows/: Cargo.toml
lib/crates/arc-workflows/src/: daytona_sandbox.rs  devcontainer_bridge.rs  engine.rs  event.rs  git.rs  pull_request.rs  retro_agent.rs
lib/crates/arc-workflows/tests/: attractor_compat.rs  daytona_integration.rs  integration.rs
lib/crates/fabro-agent/: Cargo.toml  README.md
lib/crates/fabro-agent/src/: agent_profile.rs  apply_patch.lark  apply_patch.rs  cli.rs  compaction.rs  config.rs  context_window.rs  docker_sandbox.rs  error.rs  event.rs  file_tracker.rs  history.rs  lib.rs  loop_detection.rs  mcp_integration.rs  memory.rs  provider_profile.rs  sandbox.rs  session.rs  skills.rs  subagent.rs  test_support.rs  todo_runtime.rs  todo_tools.rs  tool_execution.rs  tool_registry.rs  tools.rs  truncation.rs  types.rs  v4a_patch.rs
lib/crates/fabro-api/: Cargo.toml  build.rs
lib/crates/fabro-api-types/: Cargo.toml  build.rs
lib/crates/fabro-api-types/src/: lib.rs
lib/crates/fabro-auth/: Cargo.toml
lib/crates/fabro-cli/: Cargo.toml
lib/crates/fabro-config/: Cargo.toml
lib/crates/fabro-core/: Cargo.toml
lib/crates/fabro-db/: Cargo.toml
lib/crates/fabro-devcontainer/: Cargo.toml
lib/crates/fabro-git-storage/: Cargo.toml
lib/crates/fabro-github/: Cargo.toml
lib/crates/fabro-graphviz/: Cargo.toml
lib/crates/fabro-hooks/: Cargo.toml
lib/crates/fabro-interview/: Cargo.toml
(+1561 files in other folders)
