[package]
name = "agent-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "CLI for the agent agentic loop"
repository = "https://github.com/brynary/attractor-rust"
keywords = ["llm", "ai", "agent", "cli"]
categories = ["command-line-utilities"]

[[bin]]
name = "agent"
path = "src/main.rs"

[dependencies]
agent = { path = "../agent" }
llm = { path = "../llm" }
clap.workspace = true
tokio.workspace = true
anyhow.workspace = true
serde_json.workspace = true
async-trait.workspace = true

[lints]
workspace = true
