[package]
name = "agent"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "A programmable agentic loop for coding agents"
repository = "https://github.com/brynary/attractor-rust"
readme = "README.md"
keywords = ["llm", "ai", "agent", "coding"]
categories = ["api-bindings"]

[lib]
doctest = false

[dependencies]
llm = { path = "../llm" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
futures.workspace = true
async-trait.workspace = true
jsonschema.workspace = true
chrono.workspace = true
glob = "0.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
