[package]
name = "arc-attractor"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "A DOT-based pipeline runner for multi-stage AI workflows"
repository = "https://github.com/brynary/attractor-rust"
keywords = ["llm", "ai", "pipeline", "workflow", "dot"]
categories = ["development-tools"]
readme = "README.md"

[lib]
doctest = false

[[bin]]
name = "arc-attractor"
path = "src/main.rs"
test = false

[features]
default = ["server"]
server = ["axum", "tower", "tokio-stream"]

[dependencies]
clap.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
arc-agent = { path = "../arc-agent" }
arc-util = { path = "../arc-util" }
arc-llm = { path = "../arc-llm" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
rand.workspace = true
async-trait.workspace = true
futures.workspace = true
chrono = { workspace = true, features = ["serde"] }
nom = "7"
toml.workspace = true
dirs = "6"
dialoguer.workspace = true
daytona-sdk.workspace = true
daytona-api-client.workspace = true
scopeguard = "1"
git2.workspace = true
tokio-util.workspace = true
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tokio-stream = { workspace = true, optional = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
axum = "0.8"
tower = "0.5"
tokio-stream = { workspace = true, features = ["sync"] }
http-body-util = "0.1"
dotenvy.workspace = true
assert_cmd = "2"
predicates = "3"
