[package]
name = "arc-mcp"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "MCP (Model Context Protocol) client for connecting to external tool servers"

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
futures.workspace = true
reqwest.workspace = true
tracing.workspace = true
rmcp = { workspace = true, features = [
    "client",
    "macros",
    "schemars",
    "server",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
