[package]
name = "attractor"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "A DOT-based pipeline runner for multi-stage AI workflows"
repository = "https://github.com/brynary/attractor-rust"
keywords = ["llm", "ai", "pipeline", "workflow", "dot"]
categories = ["development-tools"]
readme = "README.md"

[lib]
doctest = false

[[bin]]
name = "attractor"
path = "src/main.rs"

[features]
default = ["server"]
server = ["axum", "tower", "tokio-stream"]

[dependencies]
clap.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
agent = { path = "../agent" }
terminal = { path = "../terminal" }
llm = { path = "../llm" }
redact = { path = "../redact" }
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
rand.workspace = true
async-trait.workspace = true
futures.workspace = true
chrono = { workspace = true, features = ["serde"] }
nom = "7"
dirs = "6"
dialoguer.workspace = true
axum = { version = "0.8", optional = true }
tower = { version = "0.5", optional = true }
tokio-stream = { workspace = true, optional = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
axum = "0.8"
tower = "0.5"
tokio-stream = { workspace = true, features = ["sync"] }
http-body-util = "0.1"
dotenvy.workspace = true
assert_cmd = "2"
predicates = "3"
