[package]
name = "unified-llm"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "A unified client library for multiple LLM providers"
repository = "https://github.com/brynary/attractor-rust"
readme = "README.md"
keywords = ["llm", "ai", "openai", "anthropic"]
categories = ["api-bindings"]

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
rand.workspace = true
futures.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
reqwest.workspace = true

[dev-dependencies]
dotenvy.workspace = true
tokio = { workspace = true, features = ["test-util", "macros"] }

[lints]
workspace = true
