[package]
name = "unified-llm"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "A unified client library for multiple LLM providers"
repository = "https://github.com/brynary/attractor-rust"
readme = "README.md"
keywords = ["llm", "ai", "openai", "anthropic"]
categories = ["api-bindings"]

[[bin]]
name = "ullm"
path = "src/bin/ullm.rs"

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
rand.workspace = true
futures.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
reqwest.workspace = true
base64.workspace = true
bytes.workspace = true
tokio-util.workspace = true
clap.workspace = true
dotenvy.workspace = true

[dev-dependencies]
http = "1"
tokio = { workspace = true, features = ["test-util", "macros"] }
assert_cmd = "2"
predicates = "3"

[lints]
workspace = true
