[package]
name = "arc-cli"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Unified CLI for the Arc AI framework"

[[bin]]
name = "arc"
path = "src/main.rs"

[features]
default = []
server = ["dep:arc-api"]
exedev = ["arc-config/exedev", "arc-workflows/exedev"]

[dependencies]
arc-config = { path = "../arc-config" }
arc-llm = { path = "../arc-llm" }
arc-openai-oauth = { path = "../arc-openai-oauth" }
arc-github = { path = "../arc-github" }
arc-agent = { path = "../arc-agent" }
arc-mcp = { path = "../arc-mcp" }
arc-workflows = { path = "../arc-workflows" }
arc-api = { path = "../arc-api", optional = true }
arc-util = { path = "../arc-util" }
bollard.workspace = true
clap.workspace = true
console.workspace = true
daytona-sdk.workspace = true
anyhow.workspace = true
dotenvy.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tracing-appender.workspace = true
chrono.workspace = true
dirs.workspace = true
serde.workspace = true
toml.workspace = true
futures.workspace = true
regex.workspace = true
semver.workspace = true
reqwest.workspace = true
jsonwebtoken.workspace = true
base64.workspace = true
rustls = { version = "0.23", default-features = false, features = ["std", "ring"] }
rustls-pemfile = "2"
x509-parser = "0.16"
rand.workspace = true
dialoguer.workspace = true
axum = "0.8"
open = "5"
serde_json.workspace = true

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
serde_json.workspace = true
httpmock = "0.8"
