[package]
name = "arc-llm"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "A unified client library for multiple LLM providers"
repository = "https://github.com/brynary/arc"
readme = "README.md"
keywords = ["llm", "ai", "openai", "anthropic"]
categories = ["api-bindings"]

[lib]
doctest = false

[dependencies]
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
uuid.workspace = true
rand.workspace = true
futures.workspace = true
tokio-stream.workspace = true
async-trait.workspace = true
reqwest.workspace = true
base64.workspace = true
bytes.workspace = true
tokio-util.workspace = true
clap.workspace = true
dialoguer.workspace = true
tracing.workspace = true
arc-util = { path = "../arc-util" }

[dev-dependencies]
http = "1"
insta = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
dotenvy.workspace = true
httpmock = "0.8"
serde_json.workspace = true
