[package]
name = "fabro-api-types"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Generated Rust types from the Fabro API OpenAPI spec"

[lib]
doctest = false

[dependencies]
chrono = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_json.workspace = true
uuid = { workspace = true, features = ["serde"] }

[build-dependencies]
typify = { version = "0.6", default-features = false }
schemars = "0.8"
serde_json = "1"
serde_yaml = "0.9"
prettyplease = "0.2"
syn = "2"
