[package]
name = "fabro-auth"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Typed provider credential storage and resolution for Fabro"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
chrono = { workspace = true, features = ["serde"] }
fabro-http.workspace = true
fabro-model = { path = "../fabro-model" }
fabro-oauth = { path = "../fabro-oauth" }
fabro-vault = { path = "../fabro-vault" }
serde.workspace = true
serde_json.workspace = true
shlex = "1"
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
httpmock = "0.8"
tempfile = "3"
tokio = { workspace = true, features = ["macros", "test-util"] }
