[package]
name = "fabro-config"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Centralized configuration types for Fabro"

[lib]
doctest = false

[features]
default = []
exedev = ["fabro-types/exedev"]
clap = ["dep:clap", "fabro-types/clap"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, optional = true }
fabro-types = { path = "../fabro-types" }
fabro-util = { path = "../fabro-util" }
dirs.workspace = true
serde.workspace = true
strsim = "0.11"
toml.workspace = true
tracing.workspace = true

[dev-dependencies]
serde_json.workspace = true
tempfile = "3"
toml.workspace = true
