[package]
name = "fabro-config"
edition.workspace = true
version.workspace = true
publish = false
license.workspace = true
description = "Centralized configuration types for Fabro"

[lib]
doctest = false

[features]
default = []
clap = ["dep:clap", "fabro-types/clap"]

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, optional = true }
chrono.workspace = true
fabro-types = { path = "../fabro-types" }
fabro-util = { path = "../fabro-util" }
dirs.workspace = true
serde.workspace = true
serde_json.workspace = true
strsim = "0.11"
toml.workspace = true
tracing.workspace = true
thiserror.workspace = true
ulid.workspace = true

[dev-dependencies]
tempfile = "3"
toml.workspace = true
