[package]
name = "fabro-core"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Generic workflow execution engine"

[lib]
doctest = false

[dependencies]
async-trait.workspace = true
fabro-util = { path = "../fabro-util" }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
