[package]
name = "fabro-db"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "SQLite persistence layer for Fabro"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
sqlx = { workspace = true, features = ["sqlite"] }
chrono.workspace = true
thiserror.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["test-util", "macros"] }
