[package]
name = "fabro-devcontainer"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Parse and resolve devcontainer.json into Dockerfiles and lifecycle hooks"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
fabro-util = { path = "../fabro-util" }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }

[dev-dependencies]
insta = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros"] }
tempfile = "3"
