[package]
name = "fabro-git-storage"
edition.workspace = true
version.workspace = true
license.workspace = true
description = "Store structured data in git without touching the working directory"
repository = "https://github.com/brynary/arc"

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
git2.workspace = true
thiserror.workspace = true
tracing.workspace = true
walkdir.workspace = true

[dev-dependencies]
tempfile = "3"
